--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.4.4",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.1",
