--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "framer-motion": "^11.15.0",
+    "holy-loader": "^2.3.11",
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
     "next": "15.1.3",
